horizontal scrolling fix

--- a/assets/css/fixedheader.css
+++ b/assets/css/fixedheader.css
@@ -1,3 +1,13 @@
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+pre, code {
+  max-width: 100%;
+  overflow-x: auto;
+}
+
 header.site-header {
   position: sticky;
   top: 0;
@@ -27,4 +37,10 @@ img.profile-image {
 
 .header-col ul {
   margin-bottom: 0;
+}
+
+@media (max-width: 600px) {
+  .header-col {
+    display: none;
+  }
 }
